Attempt to fix overflowing code examples by forcing word wrap
* Using some code from this thread: https://stackoverflow.com/questions/248011/how-do-i-wrap-text-in-a-pre-tag
* Still needs to be confirmed in multiple browsers, might require more than this one line depending on how many browsers we want to support

Issue #183

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -659,6 +659,7 @@ p.exhibition-nav { margin-top: 20px; margin-bottom: 10px; }
 pre { 
 	margin-bottom : 30px;
 	margin-top    : 0;
+	white-space: pre-wrap;
 }
 tr.name-row { height: 60px; }
 td p { margin-top: 0; }
